# Megascops

./: package.json
.github/workflows/: publish.yml
scripts/: download-binaries.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: export.rs  lib.rs  media.rs
src/i18n/: en.json  zh-CN.json
src/lib/components/: DetectPanel.svelte
src/routes/: +page.svelte
