[package]
name = "Megascops"
version = "0.2.1-mazefork.2"
description = "A cameratrap media detection tool"
authors = ["Zhengyi Dong <zhengyi.dong@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "megascops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.13"

[dependencies]
tonic = { version = "0.13.0", features = ["tls-ring"] }
prost = "0.13"
async-stream = "0.3.6"
uuid = { version = "1.11.0", features = ["v4"] }
ffmpeg-sidecar = "2.0.2"
image = "0.25.5"
jpeg-decoder = "0.3.1"
walkdir = "2.5.0"
anyhow = "1.0.90"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam-channel = "0.5.13"
csv = "1.3.0"
fast_image_resize = { version = "5.0.0", features = ["rayon"] }
thiserror = "1.0.64"
nom-exif = "2.5.1"
rayon = "1.10.0"
webp = "0.3.0"
itertools = "0.14.0"
url = "2.5.2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rustls = "0.23.23"
rustls-native-certs = "0.8.1"
base64 = "0.22.1"
rustls-pki-types = "1.11.0"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-store = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
